feat(i18n): 实现国际化模块动态加载和按需路由翻译

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -8,10 +8,15 @@
 
 ```
 src/i18n/
-├── index.ts          # i18n 实例创建和配置
+├── index.ts              # i18n 实例创建和配置（支持动态加载）
 └── locales/
-    ├── zh-CN.ts      # 中文语言包
-    └── en-US.ts      # 英文语言包
+    ├── zh-CN.ts          # 中文语言包
+    ├── en-US.ts          # 英文语言包
+    └── modules/          # 模块化语言包
+        ├── zh-CN/
+        │   └── demo.ts   # 示例模块中文翻译
+        └── en-US/
+            └── demo.ts   # 示例模块英文翻译
 ```
 
 ## 配置说明
@@ -22,23 +27,52 @@ src/i18n/
 // src/i18n/index.ts
 import type { App } from 'vue'
 import { createI18n } from 'vue-i18n'
-import zhCN from './locales/zh-CN'
-import enUS from './locales/en-US'
+
+const getBrowserLanguage = () => {
+  const browserLang = navigator.language || (navigator as any).userLanguage
+  return ['zh-CN', 'en-US'].includes(browserLang) ? browserLang : 'zh-CN'
+}
+
+const currentLang = localStorage.getItem('locale') || getBrowserLanguage()
 
 const i18n = createI18n({
-  legacy: false,              // 使用 Composition API
-  locale: 'zh-CN',            // 默认语言
-  fallbackLocale: 'zh-CN',    // 回退语言
-  messages: {
-    'zh-CN': zhCN,
-    'en-US': enUS,
-  },
+  legacy: false,
+  locale: currentLang,
+  fallbackLocale: 'zh-CN',
+  messages: {},
 })
+
+export async function loadLanguage(lang: string) {
+  const messages = await import(`./locales/${lang}.ts`).then((messages) => {
+    i18n.global.setLocaleMessage(lang, messages.default)
+    localStorage.setItem('locale', lang)
+    return lang
+  })
+  return messages
+}
+
+loadLanguage(currentLang)
 
 export const useI18n = (app: App) => {
   app.use(i18n)
 }
+
+export default i18n
 ```
+
+### 动态加载语言包
+
+本项目支持动态加载语言包，实现按需加载以优化应用体积：
+
+```typescript
+import { loadLanguage } from '@/i18n'
+
+// 异步加载并切换语言
+await loadLanguage('zh-CN')
+await loadLanguage('en-US')
+```
+
+语言包会在首次使用时自动加载并缓存，同时会自动保存用户选择到 `localStorage`，页面刷新后会自动恢复用户选择的语言。
 
 ### 在应用入口注册
 
@@ -55,7 +89,7 @@ app.mount('#app')
 
 ## 语言包结构
 
-### 中文语言包
+### 中文语言包 (zh-CN.ts)
 
 ```typescript
 // src/i18n/locales/zh-CN.ts
@@ -71,7 +105,7 @@ export default {
 }
 ```
 
-### 英文语言包
+### 英文语言包 (en-US.ts)
 
 ```typescript
 // src/i18n/locales/en-US.ts
@@ -86,11 +120,27 @@ export default {
 }
 ```
 
+### 模块化语言包
+
+对于大型项目，可以将翻译按模块拆分到 `locales/modules/` 目录下：
+
+```typescript
+// src/i18n/locales/modules/zh-CN/demo.ts
+export default {
+  title: '示例页面',
+  info: '这是一个示例页面',
+}
+
+// src/i18n/locales/modules/en-US/demo.ts
+export default {
+  title: 'Demo Page',
+  info: 'This is a demo page',
+}
+```
+
 ## 在模板中使用
 
 ### 基本用法
-
-在模板中使用 `$t` 函数进行国际化：
 
 ```vue
 <template>
@@ -103,8 +153,6 @@ export default {
 ```
 
 ### 带参数的消息
-
-使用占位符传递参数：
 
 ```vue
 <template>
@@ -126,8 +174,6 @@ export default {
 
 ## 在脚本中使用
 
-### 使用 useI18n 组合式函数
-
 ```vue
 <script setup lang="ts">
 import { useI18n } from 'vue-i18n'
@@ -139,101 +185,51 @@ const title = t('home.title')
 
 // 带参数的翻译
 const welcome = t('common.welcome', { name: '张三' })
-
-// 使用计算属性
-import { computed } from 'vue'
-const greeting = computed(() => t('common.hello'))
-</script>
-```
-
-### 完整示例组件
-
-```vue
-<template>
-  <div class="i18n-demo">
-    <h2>{{ $t('home.title') }}</h2>
-    <p>{{ $t('home.description') }}</p>
-    <p>{{ welcomeMessage }}</p>
-    <button @click="switchLanguage">切换语言</button>
-  </div>
-</template>
-
-<script setup lang="ts">
-import { useI18n } from 'vue-i18n'
-import { computed } from 'vue'
-
-const { t, locale } = useI18n()
-
-const welcomeMessage = computed(() => {
-  return t('common.welcome', { name: 'Vue3' })
-})
-
-const switchLanguage = () => {
-  locale.value = locale.value === 'zh-CN' ? 'en-US' : 'zh-CN'
-}
 </script>
 ```
 
 ## 切换语言
 
-### 基本用法
-
-```typescript
-import { useI18n } from 'vue-i18n'
-
-const { locale } = useI18n()
-
-// 切换到中文
-locale.value = 'zh-CN'
-
-// 切换到英文
-locale.value = 'en-US'
-```
-
-### 语言切换组件
-
 ```vue
 <template>
   <div class="language-switcher">
-    <button 
-      :class="{ active: locale === 'zh-CN' }" 
-      @click="locale = 'zh-CN'"
+    <button
+      v-for="lang in languages"
+      :key="lang.value"
+      :class="{ active: currentLocale === lang.value }"
+      @click="onChangeLanguage(lang.value)"
     >
-      中文
-    </button>
-    <button 
-      :class="{ active: locale === 'en-US' }" 
-      @click="locale = 'en-US'"
-    >
-      English
+      {{ lang.label }}
     </button>
   </div>
 </template>
 
 <script setup lang="ts">
+import { loadLanguage } from '@/i18n'
 import { useI18n } from 'vue-i18n'
 
 const { locale } = useI18n()
+const currentLocale = locale
+
+const languages = [
+  { label: '中文', value: 'zh-CN' },
+  { label: 'English', value: 'en-US' },
+]
+
+const onChangeLanguage = async (lang: string) => {
+  await loadLanguage(lang)
+  locale.value = lang
+}
 </script>
-
-<style scoped>
-.language-switcher button {
-  margin: 0 5px;
-  padding: 5px 10px;
-}
-
-.language-switcher button.active {
-  background-color: #42b883;
-  color: white;
-}
-</style>
 ```
+
+> **注意**：仅修改 `locale.value` 只会切换界面语言，但不会加载对应的语言包。如果语言包尚未加载，请使用 `loadLanguage` 函数。
 
 ## 添加新语言
 
 ### 1. 创建语言文件
 
-在 `src/i18n/locales/` 目录下创建新的语言文件，例如日语：
+在 `src/i18n/locales/` 目录下创建新的语言文件：
 
 ```typescript
 // src/i18n/locales/ja-JP.ts
@@ -249,182 +245,15 @@ export default {
 }
 ```
 
-### 2. 注册新语言
+### 2. 更新支持的语言列表
 
-在 `src/i18n/index.ts` 中注册新语言：
-
-```typescript
-// src/i18n/index.ts
-import type { App } from 'vue'
-import { createI18n } from 'vue-i18n'
-import zhCN from './locales/zh-CN'
-import enUS from './locales/en-US'
-import jaJP from './locales/ja-JP'  // 导入新语言包
-
-const i18n = createI18n({
-  legacy: false,
-  locale: 'zh-CN',
-  fallbackLocale: 'zh-CN',
-  messages: {
-    'zh-CN': zhCN,
-    'en-US': enUS,
-    'ja-JP': jaJP,  // 添加到 messages 对象
-  },
-})
-
-export const useI18n = (app: App) => {
-  app.use(i18n)
-}
-```
-
-## 添加新翻译键
-
-### 1. 在所有语言包中添加
+在 `src/i18n/index.ts` 中更新 `getBrowserLanguage` 函数：
 
 ```typescript
-// src/i18n/locales/zh-CN.ts
-export default {
-  common: {
-    hello: '你好',
-    welcome: '欢迎，{name}!',
-  },
-  home: {
-    title: '欢迎使用 Vue3 通用模板',
-    description: '这是一个功能完善、易于扩展的 Vue3 通用模板项目',
-  },
-  // 新增表单相关翻译
-  form: {
-    username: '用户名',
-    password: '密码',
-    submit: '提交',
-    cancel: '取消',
-    reset: '重置',
-  },
-  // 新增按钮相关翻译
-  button: {
-    save: '保存',
-    edit: '编辑',
-    delete: '删除',
-    add: '添加',
-    search: '搜索',
-  },
+const getBrowserLanguage = () => {
+  const browserLang = navigator.language || (navigator as any).userLanguage
+  return ['zh-CN', 'en-US', 'ja-JP'].includes(browserLang) ? browserLang : 'zh-CN'
 }
-```
-
-```typescript
-// src/i18n/locales/en-US.ts
-export default {
-  common: {
-    welcome: 'Welcome, {name}!',
-  },
-  home: {
-    title: 'Welcome to Vue3 Common Template',
-    description: 'This is a feature-rich, easy-to-extend Vue3 common template project',
-  },
-  // New form translations
-  form: {
-    username: 'Username',
-    password: 'Password',
-    submit: 'Submit',
-    cancel: 'Cancel',
-    reset: 'Reset',
-  },
-  // New button translations
-  button: {
-    save: 'Save',
-    edit: 'Edit',
-    delete: 'Delete',
-    add: 'Add',
-    search: 'Search',
-  },
-}
-```
-
-### 2. 在组件中使用
-
-```vue
-<template>
-  <form>
-    <div>
-      <label>{{ $t('form.username') }}</label>
-      <input type="text" :placeholder="$t('form.username')" />
-    </div>
-    <div>
-      <label>{{ $t('form.password') }}</label>
-      <input type="password" :placeholder="$t('form.password')" />
-    </div>
-    <button type="submit">{{ $t('form.submit') }}</button>
-    <button type="button">{{ $t('button.cancel') }}</button>
-  </form>
-</template>
-```
-
-## 复数形式
-
-Vue I18n 支持复数形式：
-
-```typescript
-// 语言包中使用复数
-export default {
-  cart: {
-    item: '{count, plural, =0 {没有商品} =1 {1个商品} other {{count}个商品}}',
-  },
-}
-```
-
-```vue
-<template>
-  <!-- 输出: 5个商品 -->
-  <p>{{ $t('cart.item', { count: 5 }) }}</p>
-  
-  <!-- 输出: 1个商品 -->
-  <p>{{ $t('cart.item', { count: 1 }) }}</p>
-  
-  <!-- 输出: 没有商品 -->
-  <p>{{ $t('cart.item', { count: 0 }) }}</p>
-</template>
-```
-
-## 命名空间
-
-对于大型项目，可以使用命名空间组织翻译：
-
-```typescript
-// src/i18n/locales/zh-CN.ts
-export default {
-  common: {
-    // 通用翻译
-  },
-  home: {
-    // 首页翻译
-  },
-  admin: {
-    // 管理后台翻译
-    users: {
-      title: '用户管理',
-      add: '添加用户',
-      edit: '编辑用户',
-      delete: '删除用户',
-    },
-  },
-  user: {
-    // 用户相关翻译
-    profile: {
-      title: '个人资料',
-      name: '姓名',
-      email: '邮箱',
-    },
-  },
-}
-```
-
-```vue
-<template>
-  <!-- 使用命名空间 -->
-  <h1>{{ $t('admin.users.title') }}</h1>
-  <button>{{ $t('admin.users.add') }}</button>
-  <h1>{{ $t('user.profile.title') }}</h1>
-</template>
 ```
 
 ## 最佳实践
@@ -434,18 +263,18 @@ export default {
 ```typescript
 // 推荐：按模块组织
 export default {
-  // 全局通用
   common: {
-    confirm: '确定',
-    cancel: '取消',
-    submit: '提交',
+    /* 通用翻译 */
   },
-  // 首页
-  home: {...},
-  // 用户模块
-  user: {...},
-  // 设置模块
-  settings: {...},
+  home: {
+    /* 首页翻译 */
+  },
+  user: {
+    /* 用户模块翻译 */
+  },
+  settings: {
+    /* 设置模块翻译 */
+  },
 }
 ```
 
@@ -469,26 +298,4 @@ export default {
     password: '密码',
   },
 }
-
-// 不推荐：使用 kebab-case
-export default {
-  'form-username': '用户名',
-  'form-password': '密码',
-}
-```
-
-### 4. 使用辅助函数简化调用
-
-```typescript
-// src/utils/i18n.ts
-import { useI18n } from 'vue-i18n'
-
-export function t(key: string) {
-  const { t } = useI18n()
-  return t(key)
-}
-
-// 在组件中使用
-import { t } from '@/utils/i18n'
-const title = t('home.title')
 ```
